rnsc/test_data/integration/error/parser/outside_class_directive/synthetic_keyword.rns
; some comment
; another comment
synthetic
.class public HelloWorld
.super java/lang/Object
